# distilbert-classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/results/: capec-mitre.txt
data/results/back_translation/: bleu_scores_translated.txt  translated.xlsx  translated_af.xlsx  translated_bn.xlsx  translated_kn.xlsx  translated_mt.xlsx
src/: NB_Randomforest_engine.py  SGD_engine.py  back_translation_engine.py  classification.py  clustering_engine.py  cosine-similarity.py  distilBERT_RAPIDS.py  distilBERT_STRIDE.py  feedforward_engine.py  gemini_classifier.py  hyperparm.py  ovr_engine.py  train_engine.py
src/models/: NB_Randomforest_model.py  clustering_models.py  feedforward_model.py  model.py  ovr_model.py
src/models/BERT/: README.md
src/models/SGD/: sgd_model.pkl
src/models/SVM/: linear_svc_model.joblib  tfidf_vectorizer.joblib
src/modules/: capec-mitre.py  evaluate_BLEU.py  extract_keywords.py  predefined_keywords.py  preprocessing.py  translate.py  visualise.py
